--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "todo-api",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.ts",
   "scripts": {
-    "serve": "node server.js",
-    "test": "test"
+    "serve": "tsc && node ./build/server.js",
+    "test": "test",
+    "prettify": "prettier --write ./src/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,20 @@
   },
   "homepage": "https://github.com/ClementEraud/todo-api#readme",
   "dependencies": {
+    "@types/express": "^4.16.1",
+    "@types/express-graphql": "^0.6.2",
+    "@types/graphql": "^14.0.5",
+    "@types/mongoose": "^5.3.10",
+    "@types/node": "^10.12.19",
     "eslint": "^5.12.1",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
-    "graphql": "^14.1.1"
+    "graphql": "^14.1.1",
+    "mongoose": "^5.4.7",
+    "typescript": "^3.2.4"
+  },
+  "devDependencies": {
+    "@types/mongodb": "^3.1.19",
+    "prettier": "^1.16.1"
   }
 }
