--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "serve": "tsc && node ./build/server.js",
+    "serve": "tsc && node --no-deprecation ./build/server.js",
     "test": "test",
     "prettify": "prettier --write ./src/**/*.ts"
   },
@@ -20,12 +20,14 @@
   "homepage": "https://github.com/ClementEraud/todo-api#readme",
   "dependencies": {
     "@types/async": "^2.4.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.1",
     "@types/express-graphql": "^0.6.2",
     "@types/graphql": "^14.0.5",
     "@types/mongoose": "^5.3.10",
     "@types/node": "^10.12.19",
+    "bcrypt": "^3.0.3",
     "cors": "^2.8.5",
     "eslint": "^5.12.1",
     "express": "^4.16.4",
